# gnome-shell-extension-sensors

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
config/: .gitignore
data/: .gitignore  Makefile.am  metadata.json.in
m4/: .gitignore
po/: .gitignore  LINGUAS  Makevars  Makevars.in  de.po  es.po  fr.po  gnome-shell-extension-sensors.pot  it.po  nb.po  redo_po.sh  redo_pot.sh  tr.po  zh_CN.po
src/: Makefile.am  convenience.js  extension.js  mrg_sensors.sh  prefs.js  subproc.js  utilities.js
